--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -504,7 +504,7 @@
                                                                 <th rowspan="2">FROM</th>
                                                                 <th rowspan="2">TO</th>
                                                                 <th rowspan="2" class="thwrap">TOTAL HOURS</th>
-                                                                <th rowspan="2" class="thwrap">Normal Day</th>
+                                                                <th rowspan="2" class="thwrap">Normal Hour</th>
                                                                 <th colspan="4">OVERTIME</th>
                                                             </tr>
                                                             <tr>
@@ -552,10 +552,10 @@
                                                                     <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size60 textcenter" onchange="GetManpowerHour()">
                                                                 </td>
                                                                 <td class="text-size100">
-                                                                    <input id="chkBreak1" class="chkBreak1" type="checkbox" style="margin-left: 20px;     margin-right: 20px;"/>
+                                                                    <input id="chkBreak1" class="chkBreak1" onchange="GetManpowerHour('1')" type="checkbox" style="margin-left: 20px; margin-right: 20px;"/>
                                                                 </td>
                                                                 <td class="text-size100">
-                                                                    <input id="chkBreak2" class="chkBreak2" type="checkbox" style="margin-left: 20px;     margin-right: 20px;"/>
+                                                                    <input id="chkBreak2" class="chkBreak2" onchange="GetManpowerHour('2')" type="checkbox" style="margin-left: 20px;     margin-right: 20px;"/>
                                                                 </td>
                                                                 <td>
                                                                     <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter txtdisablerow" disabled />
