--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -482,7 +482,7 @@
                                                         <th rowspan="2">From</th>
                                                         <th rowspan="2">To</th>
                                                         <th rowspan="2" class="thwrap">Total Hours</th>
-                                                        <th rowspan="2" class="thwrap">Normal Day</th>
+                                                        <th rowspan="2" class="thwrap">Normal Hour</th>
                                                         <th colspan="4">Overtime</th>
                                                     </tr>
                                                     <tr>
