--- a/Alpha/AlphaMvc/Content/custom.css
+++ b/Alpha/AlphaMvc/Content/custom.css
@@ -20,7 +20,48 @@
  */
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
+.headerimg{
+    background: url(../Images/mechine.png) no-repeat top center;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.428571429;
+    color: #333333;
+    /*background-color: #c20a0a;*/
+        background-color: #ece9cd;
 
+}
+    .menublue{
+    background: #4b7490 !important;
+    color:white !important;
+    padding: 15px;
+}
+    .menunevyblue{
+    background: #345080 !important;
+    color:white !important;
+    padding: 15px;
+}
+    .menupuple{
+    background: #5b1675 !important;
+    color:white !important;
+    padding: 15px;
+}
+    .menupink{
+    background: #ab376a !important;
+    color:white !important;
+    padding: 15px;
+}
+    .menugray{
+    background: #5c5c5c !important;
+    color:white !important;
+    padding: 15px;
+}
+    /*.menulightblue {
+    background: #4b7490;
+}*/
+    .colorwhite
+{
+    color:white !important;
+}
 article,
 aside,
 details,
@@ -3397,7 +3438,7 @@ input[type="button"].btn-block {
   display: none;
   float: left;
   min-width: 160px;
-  padding: 5px 0;
+  padding: 0px 0;
   margin: 2px 0 0;
   font-size: 14px;
   list-style: none;
@@ -3467,6 +3508,85 @@ input[type="button"].btn-block {
   display: block;
 }
 
+/*==================================================dropdown-menulightblue*/
+.dropdown-menulightblue {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 160px;
+  padding: 0px 0;
+  margin: 0px 0 0;
+  font-size: 14px;
+  list-style: none;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+          box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  background-clip: padding-box;
+}
+
+.dropdown-menulightblue.pull-right {
+  right: 0;
+  left: auto;
+}
+
+.dropdown-menulightblue .divider {
+  height: 1px;
+  margin: 9px 0;
+  overflow: hidden;
+  background-color: #e5e5e5;
+}
+
+.dropdown-menulightblue > li > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.428571429;
+  color: #333333;
+  white-space: nowrap;
+}
+
+.dropdown-menulightblue > li > a:hover,
+.dropdown-menulightblue > li > a:focus {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #bba0c0;
+}
+
+.dropdown-menulightblue > .active > a,
+.dropdown-menulightblue > .active > a:hover,
+.dropdown-menulightblue > .active > a:focus {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #428bca;
+  outline: 0;
+}
+
+.dropdown-menulightblue > .disabled > a,
+.dropdown-menulightblue > .disabled > a:hover,
+.dropdown-menulightblue > .disabled > a:focus {
+  color: #999999;
+}
+
+.dropdown-menulightblue > .disabled > a:hover,
+.dropdown-menulightblue > .disabled > a:focus {
+  text-decoration: none;
+  cursor: not-allowed;
+  background-color: transparent;
+  background-image: none;
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+}
+
+.open > .dropdown-menulightblue {
+  display: block;
+}
+/*==================================================dropdown-menulightblue*/
 .open > a {
   outline: 0;
 }
@@ -4164,8 +4284,10 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .nav .caret {
-  border-top-color: #428bca;
-  border-bottom-color: #428bca;
+  /*border-top-color: #428bca;
+  border-bottom-color: #428bca;*/
+  border-top-color: #f8f8f8;
+  border-bottom-color: #f8f8f8;
 }
 
 .nav a:hover .caret {
@@ -4180,11 +4302,16 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar {
-  position: relative;
+  /*position: relative;
   z-index: 1000;
   min-height: 50px;
   margin-bottom: 20px;
-  border: 1px solid transparent;
+  border: 1px solid transparent;*/
+  position: relative;
+  z-index: 1000;
+  min-height: 50px;
+  margin-bottom: 0px;
+/* border: 1px solid transparent; */
 }
 
 .navbar:before,
