--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -629,10 +629,10 @@
                                                                     <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size60 textcenter" onchange="GetManpowerHour()">
                                                                 </td>
                                                                 <td class="text-size100">
-                                                                    <input id="chkBreak1" class="chkBreak1" type="checkbox" style="margin-left: 20px;     margin-right: 20px;"/>
+                                                                    <input id="chkBreak1" class="chkBreak1" onchange="GetManpowerHour('1')" type="checkbox" style="margin-left: 20px;     margin-right: 20px;"/>
                                                                 </td>
                                                                 <td class="text-size100">
-                                                                    <input id="chkBreak2" class="chkBreak2" type="checkbox" style="margin-left: 20px;     margin-right: 20px;"/>
+                                                                    <input id="chkBreak2" class="chkBreak2" onchange="GetManpowerHour('2')" type="checkbox" style="margin-left: 20px;     margin-right: 20px;"/>
                                                                 </td>
                                                                 <td>
                                                                     <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter txtdisablerow" disabled/>
