--- a/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
@@ -53,6 +53,8 @@
                             <th rowspan="3">DATE</th>
                             <th rowspan="3">DAY</th>
                             <th colspan="2">WORKING TIME</th>
+                            <th rowspan="3">Break1</th>
+                            <th rowspan="3">Break2</th>
                             <th colspan="6">NUMBER OF HOURS</th>
                             <th rowspan="3">Additionnal Wages (Baht)</th>
                             <th rowspan="3">Deduction(-)(Baht)</th>
@@ -86,11 +88,15 @@
                             <td></td>
                             <td></td>
                             <td></td>
+                            <td></td>
+                            <td></td>
                             <td>TOTAL</td>
                             <td>(WH3%)</td>
                         </tr>
                         <tr>
                             <td colspan="8">TOTAL (HRS)</td>
+                            <td></td>
+                            <td></td>
                             <td></td>
                             @*<td id="totalNormal">24.00</td>*@
                             <td id="totalNormalDay"></td>
@@ -106,6 +112,8 @@
                         <tr>
                             <td colspan="8">RATE (BAHT)</td>
                             <td></td>
+                            <td></td>
+                            <td></td>
                             <td id="totalBathNormalDay"></td>
                             <td id="totalBathNormal"></td>
                             <td id="totalBathPremium"></td>
@@ -119,6 +127,8 @@
                         <tr>
                             <td colspan="8">AMOUNTS (BAHT)</td>
                             <td></td>
+                            <td></td>
+                            <td></td>
                             <td id="totalAmountNormalDay"></td>
                             <td id="totalAmountNormal"></td>
                             <td id="totalAmountPremium"></td>
@@ -131,6 +141,8 @@
                         </tr>
                         <tr>
                             <td colspan="8">TOTAL WAGES(BAHT)</td>
+                            <td></td>
+                            <td></td>
                             <td></td>
                             <td></td>
                             <td></td>
